// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getLicenseFileText for a relative path for line ending crlf should match snapshot 1`] = `
"This file was generated with the generate-license-file npm package!
https://www.npmjs.com/package/generate-license-file

The following npm package may be included in this product:

 - dep-four@1.0.0

This package contains the following license:

# Dep Four

This license file is spelt \`LICENCE\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-one@1.0.0

This package contains the following license:

# Dep One

This license file is spelt \`LICENSE.md\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-seven@1.0.0

This package contains the following license:

# Dep Seven

This license should be found.

With the following notices:

This is the notice file bundled with dependency seven.

-----------

The following npm package may be included in this product:

 - dep-three@1.0.0

This package contains the following license:

# Dep Three

This license file is spelt \`LICENSE\`.
This license should be found.

-----------

The following npm packages may be included in this product:

 - dep-two-duplicate@1.0.0
 - dep-two@1.0.0

These packages each contain the following license:

# Dep Two

This license file is spelt \`LICENCE.md\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-five@1.0.0

This package contains the following license:

MIT

-----------

This file was generated with the generate-license-file npm package!
https://www.npmjs.com/package/generate-license-file
"
`;

exports[`getLicenseFileText for a relative path for line ending lf should match snapshot 1`] = `
"This file was generated with the generate-license-file npm package!
https://www.npmjs.com/package/generate-license-file

The following npm package may be included in this product:

 - dep-four@1.0.0

This package contains the following license:

# Dep Four

This license file is spelt \`LICENCE\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-one@1.0.0

This package contains the following license:

# Dep One

This license file is spelt \`LICENSE.md\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-seven@1.0.0

This package contains the following license:

# Dep Seven

This license should be found.

With the following notices:

This is the notice file bundled with dependency seven.

-----------

The following npm package may be included in this product:

 - dep-three@1.0.0

This package contains the following license:

# Dep Three

This license file is spelt \`LICENSE\`.
This license should be found.

-----------

The following npm packages may be included in this product:

 - dep-two-duplicate@1.0.0
 - dep-two@1.0.0

These packages each contain the following license:

# Dep Two

This license file is spelt \`LICENCE.md\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-five@1.0.0

This package contains the following license:

MIT

-----------

This file was generated with the generate-license-file npm package!
https://www.npmjs.com/package/generate-license-file
"
`;

exports[`getLicenseFileText for an absolute path for line ending crlf should match snapshot 1`] = `
"This file was generated with the generate-license-file npm package!
https://www.npmjs.com/package/generate-license-file

The following npm package may be included in this product:

 - dep-four@1.0.0

This package contains the following license:

# Dep Four

This license file is spelt \`LICENCE\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-one@1.0.0

This package contains the following license:

# Dep One

This license file is spelt \`LICENSE.md\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-seven@1.0.0

This package contains the following license:

# Dep Seven

This license should be found.

With the following notices:

This is the notice file bundled with dependency seven.

-----------

The following npm package may be included in this product:

 - dep-three@1.0.0

This package contains the following license:

# Dep Three

This license file is spelt \`LICENSE\`.
This license should be found.

-----------

The following npm packages may be included in this product:

 - dep-two-duplicate@1.0.0
 - dep-two@1.0.0

These packages each contain the following license:

# Dep Two

This license file is spelt \`LICENCE.md\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-five@1.0.0

This package contains the following license:

MIT

-----------

This file was generated with the generate-license-file npm package!
https://www.npmjs.com/package/generate-license-file
"
`;

exports[`getLicenseFileText for an absolute path for line ending lf should match snapshot 1`] = `
"This file was generated with the generate-license-file npm package!
https://www.npmjs.com/package/generate-license-file

The following npm package may be included in this product:

 - dep-four@1.0.0

This package contains the following license:

# Dep Four

This license file is spelt \`LICENCE\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-one@1.0.0

This package contains the following license:

# Dep One

This license file is spelt \`LICENSE.md\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-seven@1.0.0

This package contains the following license:

# Dep Seven

This license should be found.

With the following notices:

This is the notice file bundled with dependency seven.

-----------

The following npm package may be included in this product:

 - dep-three@1.0.0

This package contains the following license:

# Dep Three

This license file is spelt \`LICENSE\`.
This license should be found.

-----------

The following npm packages may be included in this product:

 - dep-two-duplicate@1.0.0
 - dep-two@1.0.0

These packages each contain the following license:

# Dep Two

This license file is spelt \`LICENCE.md\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-five@1.0.0

This package contains the following license:

MIT

-----------

This file was generated with the generate-license-file npm package!
https://www.npmjs.com/package/generate-license-file
"
`;

exports[`getLicenseFileText should omit versions when omitVersions is true 1`] = `
"This file was generated with the generate-license-file npm package!
https://www.npmjs.com/package/generate-license-file

The following npm package may be included in this product:

 - dep-four

This package contains the following license:

# Dep Four

This license file is spelt \`LICENCE\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-one

This package contains the following license:

# Dep One

This license file is spelt \`LICENSE.md\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-seven

This package contains the following license:

# Dep Seven

This license should be found.

With the following notices:

This is the notice file bundled with dependency seven.

-----------

The following npm package may be included in this product:

 - dep-three

This package contains the following license:

# Dep Three

This license file is spelt \`LICENSE\`.
This license should be found.

-----------

The following npm packages may be included in this product:

 - dep-two
 - dep-two-duplicate

These packages each contain the following license:

# Dep Two

This license file is spelt \`LICENCE.md\`.
This license should be found.

-----------

The following npm package may be included in this product:

 - dep-five

This package contains the following license:

MIT

-----------

This file was generated with the generate-license-file npm package!
https://www.npmjs.com/package/generate-license-file
"
`;
